2005-08-11  Carl Worth  <cworth@cworth.org>

	Reviewed by: keithp

	* src/cairoint.h: Add hash_entry field to cairo_scaled_font_t so
	that it can be hashed.

	* src/cairo-font.c: (_cairo_scaled_font_map_lock),
	(_cairo_scaled_font_map_unlock), (_cairo_scaled_font_map_destroy),
	(_cairo_scaled_font_init_key), (_cairo_scaled_font_keys_equal),
	(_cairo_scaled_font_init), (_cairo_scaled_font_fini),
	(cairo_scaled_font_create), (cairo_scaled_font_reference),
	(cairo_scaled_font_destroy), (_cairo_font_reset_static_data):
	Convert the font_face/matrix/ctm/options => cairo_scaled_font_t
	mapping from a two-layer cairo-cache.c implementation to a single
	cairo-hash.c implementation backed by a simple array for the
	secondary cache.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* src/cairo-path-data.c (_cairo_path_data_append_to_context):
	Move checks for invalid number of points before the calls that
	use the points.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* src/cairo-color.c: Fix conversion to short, to get a uniform
	range even for 0xffff.  In other words, a color component of
	of (1.0 - epsilon) would convert to 0xffff, not 0xfffe.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* RELEASING:
	* Makefile.am: Generate sh1sum instead of md5sum.  Use gpg to
	sign it.  You need gpg set up.

2005-08-12  Carl Worth  <cworth@cworth.org>

	* RELEASING:
	* Makefile.am: Move tagging from an instruction in RELEASING to
	an automated step at the end of release-publish.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* Makefile.am (release-publish): Check that the micro component
	of the version number is even.

	* RELEASING: Fixed the pattern to find all public header files.

2005-08-11  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c (_cairo_toy_font_face_fini): Fix inverted sense
	of assert statement which led to lots of unpleasant crashes.

2005-08-08  Carl Worth  <cworth@cworth.org>

	Reviewed by: keithp
